feat: Created user router
